@@ -1,6 +1,8 @@
 2005-08-14  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c: Added eval and apply primitives
+	(dfsch_make_context): added top-level-environment function
+	(dfsch_make_context): Renamed env to current-environment
 
 	* src/load.c (dfsch_load_scm_fd): Split core from dfsch_load_scm
 	into separate function
